--- a/src/app/allModules/master/user/user.component.html
+++ b/src/app/allModules/master/user/user.component.html
@@ -124,7 +124,7 @@
                 <div fxLayout>
                     <div fxFlex fxLayoutAlign="end">
                         <button class="floatBtn" mat-fab (click)="ResetControl()">
-                            <mat-icon style="color: white;">add</mat-icon>
+                            <mat-icon style="color: white;width: 45px;height: 45px;">add</mat-icon>
                         </button>
                     </div>
                 </div>
