--- a/src/app/notifications/notification-dialog/notification-dialog.component.scss
+++ b/src/app/notifications/notification-dialog/notification-dialog.component.scss
@@ -28,4 +28,9 @@
     background-color: #efb577 !important;
     color: white !important;
   }
+  .SaveBtn{
+    background-color: white !important;
+    color: #efb577 !important;
+    border: 1px solid #efb577 !important;
+  }
 }
