--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -88,7 +88,7 @@
             </ng-container>
 
             <ng-container matColumnDef="LegalName">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> LegalName </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ShortName </th>
               <td mat-cell *matCellDef="let element">
                 <span class="next">{{element.LegalName}}
                 </span>
