--- a/src/app/notifications/attachment-dialog/attachment-dialog.component.html
+++ b/src/app/notifications/attachment-dialog/attachment-dialog.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <mat-dialog-actions class="m-0 p-16" align="end">
-    <button mat-button type="button" (click)="CloseClicked()">Close</button>
-  </mat-dialog-actions>
+  <!-- <mat-dialog-actions class="m-0 p-16" align="end">
+    <button mat-button type="button" class="SaveBtn" (click)="CloseClicked()">Close</button>
+  </mat-dialog-actions> -->
 </div>
