ID Number not mandatory

--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
@@ -15,8 +15,8 @@
       <div fxLayoutAlign="end" align="end"  fxFlex="30">
         <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px">
           <div fxLayout="column" style="text-align: left;" fxLayoutAlign="center">
-            <span>Emami Contact Person </span>
-            <span>Emami Contact Person Mail </span>
+            <span>Contact Person </span>
+            <span>Contact Person Mail </span>
           </div>
           <div fxLayout="column" style="text-align: center;" fxLayoutAlign="center">
             <span>-</span>
@@ -630,7 +630,7 @@
                       </mat-form-field>
                     </div>
 
-                    <div fxFlex.md fxFlex.sm fxFlex.xs fxFlex="30" fxLayoutAlign="space-between center">
+                    <!-- <div fxFlex.md fxFlex.sm fxFlex.xs fxFlex="30" fxLayoutAlign="space-between center">
                       <mat-form-field class="px-20" style="width: 100%;">
                         <input matInput placeholder="ID" formControlName="IDNumber"
                           (keyup.enter)="OnIdentityKeyEnter($event)" #iDNumber style="font-weight: 600;opacity: 0.8;">
@@ -652,7 +652,7 @@
                         *ngIf="IdentityValidity && identificationFormGroup.get('IDNumber').touched && !identificationFormGroup.get('IDNumber').hasError('required')">
                         Invalid ID
                       </div>
-                    </div>
+                    </div> -->
 
                     <!-- <div fxFlex.md style="cursor: pointer !important;" fxFlex.sm fxFlex.xs fxFlex="30" class="ml-20"
                       fxLayout="row" fxLayoutAlign="space-between center">
